--- a/.github/workflows/platform-request.yml
+++ b/.github/workflows/platform-request.yml
@@ -178,9 +178,9 @@ jobs:
           echo "Changes committed successfully"
 
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v5
+        uses: peter-evans/create-pull-request@v7
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          branch-token: ${{ secrets.GITHUB_TOKEN }}
           title: "✨ Tilføj platform: ${{ fromJson(steps.parse-issue.outputs.platform-data).name }}"
           body: |
             ## Ny platform tilføjet
