fix: workflow [skip ci]

--- a/.github/workflows/platform-request.yml
+++ b/.github/workflows/platform-request.yml
@@ -156,53 +156,17 @@ jobs:
           echo "Platform file created successfully"
           ls -la src/content/platforms/${{ steps.parse-issue.outputs.publisher-dir }}
 
-      - name: Configure git and create branch
-        id: branch-config
+      - name: Configure git
         run: |
           echo "Configuring git..."
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-
-          BRANCH_NAME="platform/add-${{ github.event.issue.number }}"
-          echo "branch_name=$BRANCH_NAME" >> $GITHUB_OUTPUT
-          
-          echo "Creating new branch $BRANCH_NAME from main..."
-          git fetch origin main
-          git checkout -b "$BRANCH_NAME" origin/main
-
-          echo "Branch created successfully"
-          git branch --show-current
-
-      - name: Commit changes
-        id: commit
-        run: |
-          echo "Current git status:"
-          git status
-
-          echo "Adding changes to git..."
-          git add src/content/platforms/
-
-          echo "Git status after add:"
-          git status
-
-          echo "Committing changes..."
-          git commit -m "feat(platform): tilføj ${{ fromJson(steps.parse-issue.outputs.platform-data).name }}"
-
-          echo "Git status after commit:"
-          git status
-
-          echo "Git diff with main:"
-          git diff main
-
-          echo "Pushing changes..."
-          git push origin "${{ steps.branch-config.outputs.branch_name }}"
 
       - name: Create Pull Request
         id: create-pr
         uses: peter-evans/create-pull-request@v7
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          branch-token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: "feat(platform): tilføj ${{ fromJson(steps.parse-issue.outputs.platform-data).name }}"
           title: "✨ Tilføj platform: ${{ fromJson(steps.parse-issue.outputs.platform-data).name }}"
           body: |
@@ -231,7 +195,6 @@ jobs:
             platform
             automated-pr
           base: main
-          branch: ${{ steps.branch-config.outputs.branch_name }}
           delete-branch: true
           committer: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
           author: ${{ github.event.issue.user.login }} <${{ github.event.issue.user.login }}@users.noreply.github.com>
@@ -241,7 +204,6 @@ jobs:
           echo "Pull Request Operation: ${{ steps.create-pr.outputs.pull-request-operation }}"
           echo "Pull Request Number: ${{ steps.create-pr.outputs.pull-request-number }}"
           echo "Pull Request URL: ${{ steps.create-pr.outputs.pull-request-url }}"
-          echo "Branch Name: ${{ steps.branch-config.outputs.branch_name }}"
           echo "Current git status:"
           git status
           echo "Git log:"
